[Aleph rest-dlf connector] Refactored RestDlfConnector's requestItem & cancelRequestItem method